# ganglia-mod_ibmams

./: README.md  configure.ac
gmond/: Makefile.am
gmond/modules/: Makefile.am
gmond/modules/conf.d/: ibmams.conf
gmond/modules/ibmams/: Makefile.am  mod_ibmams-aix.c  mod_ibmams-linux.c
